apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-android-extensions'
apply plugin: 'com.google.gms.google-services'

android {
    compileSdkVersion 30
    buildToolsVersion "29.0.3"

    defaultConfig {
        applicationId "com.mybus.mybusapp"
        minSdkVersion 19
        targetSdkVersion 30
        versionCode 3
        versionName "3.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        vectorDrawables.useSupportLibrary = true
        multiDexEnabled true
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            lintOptions {
                disable 'MissingTranslation'
//                checkReleaseBuilds false
                abortOnError false
            }
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    kotlinOptions {
        jvmTarget = "1.8"
    }
    bundle {
        language {
            // Specifies that the app bundle should not support
            // configuration APKs for language resources. These
            // resources are instead packaged with each base and
            // dynamic feature APK.
            enableSplit = false
        }
    }
}

dependencies {
    implementation fileTree(dir: "libs", include: ["*.jar"])
    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.31"
    implementation 'androidx.core:core-ktx:1.3.2'
    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
    testImplementation 'junit:junit:4.13.1'
    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'

    implementation 'com.google.android.material:material:1.3.0'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.recyclerview:recyclerview:1.1.0'
    implementation 'androidx.multidex:multidex:2.0.1'

    implementation 'com.github.fccaikai:AndroidPermissionX:1.0.0'
    implementation 'com.github.siyamed:android-shape-imageview:0.9.3@aar'

    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'com.wang.avi:library:2.1.3' // loading views
    implementation 'com.romandanylyk:pageindicatorview:1.0.3' // pager indecator
    implementation 'com.github.chrisbanes:PhotoView:2.1.4' // zoomable image view
//    implementation 'io.michaelrocks:libphonenumber-android:8.10.14'
    implementation 'com.joooonho:selectableroundedimageview:1.0.1'
    implementation 'com.github.dhaval2404:android-form-validation:1.0'

    implementation 'org.greenrobot:eventbus:3.2.0'
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
    implementation('com.github.bumptech.glide:glide:4.11.0') {
        exclude group: "com.android.support"
    }
    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'

    implementation 'com.intuit.sdp:sdp-android:1.0.6'
    implementation 'com.intuit.ssp:ssp-android:1.0.6'

    implementation 'com.github.ome450901:SimpleRatingBar:1.3.6'
    implementation 'com.loopeer.lib:shadow:0.0.3'
    implementation 'com.akexorcist:localization:1.2.6'
//    implementation 'com.github.franmontiel:LocaleChanger:0.9.2'
    implementation 'com.jaeger.statusbarutil:library:1.5.1'
    implementation 'com.crystal:crystalrangeseekbar:1.1.3'
    implementation 'com.duolingo.open:rtl-viewpager:2.0.0'
    implementation 'com.aminography:choosephotohelper:1.0.5'

    implementation 'com.google.firebase:firebase-core:18.0.2'
    implementation 'com.google.firebase:firebase-messaging:21.0.1'
    implementation 'com.google.firebase:firebase-firestore:22.1.1'
    implementation 'com.google.firebase:firebase-analytics:18.0.2'
//    implementation platform('com.google.firebase:firebase-bom:25.12.0')
    implementation 'com.google.firebase:firebase-auth:20.0.3'

//    implementation 'com.google.android.gms:play-services-maps:17.0.0'
//    implementation 'com.google.android.gms:play-services-location:17.0.0'

    implementation 'com.github.blennerSilva:AwesomeDialog:2.0.6'
    implementation 'com.xiaofeng.android:flowlayoutmanager:1.2.3.2'
    implementation 'com.google.android.gms:play-services-maps:17.0.0'
    implementation 'com.google.android.gms:play-services-location:18.0.0'
    implementation('io.nlopez.smartlocation:library:3.3.3')/* {
        transitive = false
    }*/
    implementation 'com.amitshekhar.android:android-networking:1.0.2'
    implementation 'org.conscrypt:conscrypt-android:2.5.1'
    implementation "androidx.browser:browser:1.3.0"


}